[package]
name = "appro-eq"
version = "0.3.0"
authors = ["Mitsuharu Seki <mitsu1986@gmail.com>"]
repository = "https://github.com/chalharu/rust-appro-eq"
keywords = ["assert", "array"]
license = "MPL-2.0"
readme = "README.md"
description = "Approximately equal traits and assertion"
documentation = "https://docs.rs/appro-eq/"
edition = "2018"

[lib]
name = "appro_eq"
bench = false
test = true

[dependencies.num-complex]
optional = true
version = ">=0.0.0"

[dependencies.num-rational]
optional = true
version = ">=0.0.0"

[dependencies.num-integer]
optional = true
version = ">=0.0.0"

[dependencies.num-traits]
optional = true
version = ">=0.0.0"

[dependencies.ndarray]
optional = true
version = ">=0.0.0"

[features]
docs = ["complex", "rational", "ndarray"]
rational = ["num-rational", "num-integer", "num-traits"]
complex = ["num-complex", "num-traits"]

[badges]
travis-ci = { repository = "chalharu/rust-appro-eq" }

[package.metadata.docs.rs]
features = ["docs"]
